# eth-mcp-server

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test_request_validator.py  test_server.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TESTING.md  response_formatter.md
examples/: fastmcp_with_error_handling.py
src/: __init__.py  server.py
src/core/: contract.py  transaction.py  wallet.py
src/middleware/: README.md  __init__.py  error_handler.py  example_usage.py  fastmcp_error_handler.py  request_validator.py  response_formatter.py  test_validator_example.py  validation_docs.md
src/models/: __init__.py  contract.py
src/utils/: logger.py  validation.py
tests/: README.md  __init__.py  middleware_example.py  run_contract_tests.py  run_integration_tests.py  run_middleware_tests.py  test_contract.py  test_error_handler.py  test_integration.py  test_middleware.py  test_response_formatter.py  test_transaction.py  test_validation.py  test_wallet.py
