[project]
name = "eth-mcp-server"
version = "0.1.0"
description = "Ethereum MCP Server with comprehensive wallet and transaction management"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "web3>=6.15.1",
    "eth-account>=0.11.0",
    "eth-typing>=4.0.0",
    "eth-utils>=3.0.0",
    "pydantic>=2.6.3",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.1",
    "fastapi>=0.110.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"] 