[metadata]
name = eth-mcp-server
version = attr: src.__version__
author = Your Name
author_email = your.email@example.com
description = Ethereum MCP Server for interacting with Ethereum blockchain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/eth-mcp-server
project_urls =
    Bug Tracker = https://github.com/yourusername/eth-mcp-server/issues
    Documentation = https://github.com/yourusername/eth-mcp-server#readme
    Source Code = https://github.com/yourusername/eth-mcp-server
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Typing :: Typed

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.11
install_requires =
    httpx>=0.27.0
    mcp>=0.9.1
    web3>=6.0.0
    eth-account>=0.11.0
    python-dotenv>=1.0.0

[options.packages.find]
where = .
include = src*
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-asyncio>=0.23.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    black>=24.0.0
    isort>=5.13.0
    flake8>=7.0.0
    mypy>=1.8.0
    pre-commit>=3.6.0
    bandit>=1.7.0
    safety>=3.0.0
    flake8-docstrings>=1.7.0
    flake8-annotations>=3.0.0
    types-requests
    types-toml

test =
    pytest>=8.0.0
    pytest-asyncio>=0.23.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0

docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=2.0.0
    sphinx-autodoc-typehints>=1.25.0
    myst-parser>=2.0.0

[options.entry_points]
console_scripts =
    eth-mcp-server = src.server:main

[options.package_data]
* = py.typed

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[check-manifest]
ignore =
    .github
    .github/*
    .pre-commit-config.yaml
    .gitignore
    .dockerignore
    Dockerfile
    Makefile
    tox.ini
    tests
    tests/*
    docs
    docs/*
    examples
    examples/*

[flake8]
# This section is kept for backwards compatibility
# The main configuration is in .flake8 file

[tool:pytest]
# This section is kept for backwards compatibility
# The main configuration is in pyproject.toml

[coverage:run]
# This section is kept for backwards compatibility
# The main configuration is in pyproject.toml

[coverage:report]
# This section is kept for backwards compatibility
# The main configuration is in pyproject.toml

[mypy]
# This section is kept for backwards compatibility
# The main configuration is in pyproject.toml

[isort]
# This section is kept for backwards compatibility
# The main configuration is in pyproject.toml

[bandit]
targets = src
recursive = true
exclude = /tests,/test,/venv,/.venv,/env,/.env
skips = B101,B601,B602,B603,B607,B608
severity = medium